objects/WT_Household_Relation_To_Process_Log__c.object
<CustomObject>
    <fields>
        <fullName>WT_Contact_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Date_Added__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_Processed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Household_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Household Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Household Relation To Process Log</label>
    <nameField>
        <displayFormat>H-{0000000}</displayFormat>
        <label>Household Relation To Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Relation To Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>